# dataflow-pubsub-perf-test

./: .gitignore  AGENTS.md  README.md  cleanup_perf_test.sh  pyproject.toml  run_perf_test.sh
dataflow_pubsub_to_bq/: __init__.py
docs/: perf_test_results_round6.md  performance_scaling_strategy.md
java/: pom.xml
java/src/main/java/com/johanesalxd/: KafkaAvroPublisher.java  KafkaAvroPublisherOptions.java  KafkaToBigQueryAvro.java  KafkaToBigQueryAvroOptions.java
java/src/main/java/com/johanesalxd/transforms/: KafkaAvroToTableRow.java  PubsubAvroToTableRow.java  SyntheticAvroGenerator.java
java/src/main/resources/: taxi_ride_v1.avsc
java/src/test/java/com/johanesalxd/: KafkaAvroPublisherTest.java
java/src/test/java/com/johanesalxd/transforms/: KafkaAvroToTableRowTest.java  SyntheticAvroGeneratorTest.java
tests/: test_raw_json.py
